--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 anyio==3.3.0
 asgiref==3.4.1
 attrs==21.2.0
+autopep8==1.5.7
 certifi==2021.5.30
 click==8.0.1
 fastapi==0.68.0
@@ -13,6 +14,7 @@ motor==2.5.0
 packaging==21.0
 pluggy==0.13.1
 py==1.10.0
+pycodestyle==2.7.0
 pydantic==1.8.2
 pymongo==3.12.0
 pyparsing==2.4.7
